--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="NotTwitterNotTwitterNotTwitterNotTwitter "
     />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
